Added functions since photo's functions
